Revert "MCR-3463 Use Java NIO API for file system resource provider (#2563)"
This reverts commit 35e5cd5414ad4d1217bfebbf770ace5b476a0274.